ifds/src/tests/solver/snapshots/ifds__tests__solver__test_loop.snap
---
source: src/tests/solver/mod.rs
expression: "format!(\"{:#?}\", sinks)"

---
[
    Taint {
        variable: "%0",
        function: "main",
        pc: 1,
    },
    Taint {
        variable: "%0",
        function: "main",
        pc: 0,
    },
    Taint {
        variable: "%0",
        function: "main",
        pc: 0,
    },
]
