ifds/src/tests/solver/snapshots/ifds__tests__solver__test_loop_dot.snap
---
source: src/tests/solver/mod.rs
expression: output

---
   \documentclass{standalone}
            \usepackage{pgf, tikz}
            \usetikzlibrary{arrows, automata}
            \begin{document}
                \begin{tikzpicture}
                    [node distance=3cm]
                    \tikzstyle{every state}=[
                        draw = black,
                        thick,
                        fill = white,
                        minimum size = 4mm
                    ]

                    \node[circle,fill,inner sep=1pt,label=left:$taut$] (0) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (1) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (2) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (3) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (4) at (0, 2) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (5) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (6) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (7) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (8) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (9) at (0, 2) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (10) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (11) at (0, 2) { };
\node[circle,fill,inner sep=1pt,label=left:$\%0$] (12) at (1, 2) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (13) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:$\%0$] (14) at (1, 0) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (15) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (16) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (17) at (0, 2) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (18) at (0, 3) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (19) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (20) at (0, 2) { };
\node[circle,fill,inner sep=1pt,label=left:$\%0$] (21) at (1, 2) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (22) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:$\%0$] (23) at (1, 0) { };
\node[circle,fill,inner sep=1pt,label=left:$\%0$] (24) at (1, 1) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (25) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (26) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (27) at (0, 2) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (28) at (0, 3) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (29) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (30) at (0, 2) { };
\node[circle,fill,inner sep=1pt,label=left:$\%0$] (31) at (1, 2) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (32) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (33) at (0, 2) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (34) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (35) at (0, 2) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (36) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:$\%0$] (37) at (1, 0) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (38) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:$\%0$] (39) at (1, 1) { };
\node[font=\tiny] (note_0) at (-1.5, 0.5) {Block(0)};
\node[font=\tiny] (note_1) at (-1.5, 1.5) {Const(0, 1.0)};
\node[font=\tiny] (note_2) at (-1.5, 2.5) {Jump(0)};
		\path[->, blue] (0) [loop right] edge  node { } (0);
		\path[->, blue] (0) [bend right] edge  node { } (1);
		\path[->, blue] (0) [bend right] edge  node { } (4);
		\path[->, blue] (0) [bend right] edge  node { } (18);
		\path[->, blue] (1) [loop right] edge  node { } (1);
		\path[->, blue] (1) [bend right] edge  node { } (4);
		\path[->, blue] (1) [bend right] edge  node { } (12);
		\path[->, blue] (1) [bend right] edge  node { } (0);
		\path[->, blue] (1) [bend right] edge  node { } (14);
		\path[->, blue] (1) [bend right] edge  node { } (24);
		\path[->] (0) edge (0);
		\path[->] (0) edge (1);
		\path[->] (1) edge (4);
		\path[->] (4) edge (18);
		\path[->] (0) edge (1);
		\path[->] (0) edge (1);
		\path[->] (1) edge (4);
		\path[->] (1) edge (12);
		\path[->] (0) edge (1);
		\path[->] (0) edge (1);
		\path[->] (1) edge (4);
		\path[->] (1) edge (4);
		\path[->, bend right] (4) edge (0);
		\path[->, bend right] (4) edge (0);
		\path[->] (1) edge (4);
		\path[->] (1) edge (4);
		\path[->] (1) edge (4);
		\path[->, bend right] (4) edge (0);
		\path[->, bend right] (4) edge (0);
		\path[->, bend right] (4) edge (0);
		\path[->, bend right] (12) edge (14);
		\path[->] (0) edge (1);
		\path[->] (0) edge (1);
		\path[->] (0) edge (1);
		\path[->] (0) edge (1);
		\path[->] (14) edge (24);


                \end{tikzpicture}
            \end{document}
