ifds/src/tests/solver/snapshots/ifds__tests__solver__test_looped_param.snap
---
source: src/tests/solver/mod.rs
expression: "format!(\"{:#?}\", sinks)"

---
[
    Taint {
        variable: "%7",
        function: "0",
        pc: 2,
    },
    Taint {
        variable: "%9",
        function: "0",
        pc: 3,
    },
    Taint {
        variable: "%7",
        function: "0",
        pc: 3,
    },
    Taint {
        variable: "%0",
        function: "0",
        pc: 1,
    },
    Taint {
        variable: "%9",
        function: "0",
        pc: 4,
    },
    Taint {
        variable: "%7",
        function: "0",
        pc: 4,
    },
]
