ifds/src/tests/solver/snapshots/ifds__tests__solver__test_looped_param_dot.snap
---
source: src/tests/solver/mod.rs
expression: output

---
   \documentclass{standalone}
            \usepackage{pgf, tikz}
            \usetikzlibrary{arrows, automata}
            \begin{document}
                \begin{tikzpicture}
                    [node distance=3cm]
                    \tikzstyle{every state}=[
                        draw = black,
                        thick,
                        fill = white,
                        minimum size = 4mm
                    ]

                    \node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (0) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (1) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (2) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (3) at (4, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (4) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (5) at (4, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (6) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (7) at (4, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (8) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (9) at (4, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (10) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (11) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (12) at (0, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (13) at (0, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (14) at (0, 4) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (15) at (0, 5) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (16) at (0, 6) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%7$}] (17) at (2, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (18) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (19) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (20) at (0, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (21) at (0, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (22) at (0, 4) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (23) at (0, 5) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (24) at (0, 6) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%9$}] (25) at (1, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%7$}] (26) at (2, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (27) at (4, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%9$}] (28) at (1, 4) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%7$}] (29) at (2, 4) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (30) at (3, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (31) at (4, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%9$}] (32) at (1, 5) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%7$}] (33) at (2, 5) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (34) at (3, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%7$}] (35) at (2, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%9$}] (36) at (1, 6) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%7$}] (37) at (2, 6) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (38) at (3, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%9$}] (39) at (1, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%7$}] (40) at (2, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (41) at (3, 4) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (42) at (3, 5) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (43) at (3, 6) { };
\node[font=\tiny] (note_0) at (-1.5, 0.5) {Assign(1, 0)};
\node[font=\tiny] (note_1) at (-1.5, 1.5) {Assign(7, 0)};
\node[font=\tiny] (note_2) at (-1.5, 2.5) {BinOp(9, 8, 7)};
\node[font=\tiny] (note_3) at (-1.5, 3.5) {Call(0, [9], [10])};
\node[font=\tiny] (note_4) at (-1.5, 4.5) {Assign(11, 0)};
\node[font=\tiny] (note_5) at (-1.5, 5.5) {Return([0])};
\node[font=\tiny] (note_6) at (-1.5, 0.5) {Assign(1, 0)};
\node[font=\tiny] (note_7) at (-1.5, 1.5) {Assign(7, 0)};
\node[font=\tiny] (note_8) at (-1.5, 2.5) {BinOp(9, 8, 7)};
\node[font=\tiny] (note_9) at (-1.5, 3.5) {Call(0, [9], [10])};
\node[font=\tiny] (note_10) at (-1.5, 4.5) {Assign(11, 0)};
\node[font=\tiny] (note_11) at (-1.5, 5.5) {Return([0])};
\node[font=\tiny] (note_12) at (-1.5, 0.5) {Assign(1, 0)};
\node[font=\tiny] (note_13) at (-1.5, 1.5) {Assign(7, 0)};
\node[font=\tiny] (note_14) at (-1.5, 2.5) {BinOp(9, 8, 7)};
\node[font=\tiny] (note_15) at (-1.5, 3.5) {Call(0, [9], [10])};
\node[font=\tiny] (note_16) at (-1.5, 4.5) {Assign(11, 0)};
\node[font=\tiny] (note_17) at (-1.5, 5.5) {Return([0])};
\node[font=\tiny] (note_18) at (-1.5, 0.5) {Assign(1, 0)};
\node[font=\tiny] (note_19) at (-1.5, 1.5) {Assign(7, 0)};
\node[font=\tiny] (note_20) at (-1.5, 2.5) {BinOp(9, 8, 7)};
\node[font=\tiny] (note_21) at (-1.5, 3.5) {Call(0, [9], [10])};
\node[font=\tiny] (note_22) at (-1.5, 4.5) {Assign(11, 0)};
\node[font=\tiny] (note_23) at (-1.5, 5.5) {Return([0])};
\node[font=\tiny] (note_24) at (-1.5, 0.5) {Assign(1, 0)};
\node[font=\tiny] (note_25) at (-1.5, 1.5) {Assign(7, 0)};
\node[font=\tiny] (note_26) at (-1.5, 2.5) {BinOp(9, 8, 7)};
\node[font=\tiny] (note_27) at (-1.5, 3.5) {Call(0, [9], [10])};
\node[font=\tiny] (note_28) at (-1.5, 4.5) {Assign(11, 0)};
\node[font=\tiny] (note_29) at (-1.5, 5.5) {Return([0])};
		\path[->, blue] (0) [loop right] edge  node { } (0);
		\path[->, blue] (0) [bend right] edge  node { } (1);
		\path[->, blue] (0) [bend right] edge  node { } (12);
		\path[->, blue] (0) [bend right] edge  node { } (13);
		\path[->, blue] (0) [bend right] edge  node { } (14);
		\path[->, blue] (0) [bend right] edge  node { } (15);
		\path[->, blue] (0) [bend right] edge  node { } (16);
		\path[->, blue] (0) [bend right] edge  node { } (17);
		\path[->, blue] (1) [loop right] edge  node { } (1);
		\path[->, blue] (1) [bend right] edge  node { } (0);
		\path[->, blue] (1) [bend right] edge  node { } (12);
		\path[->, blue] (1) [bend right] edge  node { } (13);
		\path[->, blue] (1) [bend right] edge  node { } (14);
		\path[->, blue] (1) [bend right] edge  node { } (15);
		\path[->, blue] (1) [bend right] edge  node { } (16);
		\path[->, blue] (0) [bend right] edge  node { } (25);
		\path[->, blue] (0) [bend right] edge  node { } (26);
		\path[->, blue] (3) [loop right] edge  node { } (3);
		\path[->, blue] (0) [bend right] edge  node { } (28);
		\path[->, blue] (0) [bend right] edge  node { } (29);
		\path[->, blue] (3) [bend right] edge  node { } (30);
		\path[->, blue] (3) [bend right] edge  node { } (31);
		\path[->, blue] (0) [bend right] edge  node { } (32);
		\path[->, blue] (0) [bend right] edge  node { } (33);
		\path[->, blue] (3) [bend right] edge  node { } (34);
		\path[->, blue] (3) [bend right] edge  node { } (17);
		\path[->, blue] (0) [bend right] edge  node { } (36);
		\path[->, blue] (0) [bend right] edge  node { } (37);
		\path[->, blue] (3) [bend right] edge  node { } (38);
		\path[->, blue] (3) [bend right] edge  node { } (25);
		\path[->, blue] (3) [bend right] edge  node { } (26);
		\path[->, blue] (0) [bend right] edge  node { } (41);
		\path[->, blue] (0) [bend right] edge  node { } (42);
		\path[->, blue] (0) [bend right] edge  node { } (43);


                \end{tikzpicture}
            \end{document}
