ifds/src/tests/solver/snapshots/ifds__tests__solver__test_looped_param_vars.snap
---
source: src/tests/solver/mod.rs
expression: "format!(\"{:#?}\", vars)"

---
[
    "%1",
    "%7",
    "%9",
]
