ifds/src/tests/solver/snapshots/ifds__tests__solver__test_memory_dot.snap
---
source: src/tests/solver/mod.rs
expression: output

---
   \documentclass{standalone}
            \usepackage{pgf, tikz}
            \usetikzlibrary{arrows, automata}
            \begin{document}
                \begin{tikzpicture}
                    [node distance=3cm]
                    \tikzstyle{every state}=[
                        draw = black,
                        thick,
                        fill = white,
                        minimum size = 4mm
                    ]

                    \node[circle,fill,inner sep=1pt,label=left:$taut$] (0) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (1) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (2) at (0, 2) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (3) at (0, 3) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (4) at (0, 4) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (5) at (0, 5) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (6) at (0, 6) { };
\node[circle,fill,inner sep=1pt,label=left:$\%0$] (7) at (4, 1) { };
\node[circle,fill,inner sep=1pt,label=left:$mem@0$] (8) at (1, 2) { };
\node[circle,fill,inner sep=1pt,label=left:$\%0$] (9) at (4, 2) { };
\node[circle,fill,inner sep=1pt,label=left:$mem@0$] (10) at (1, 3) { };
\node[circle,fill,inner sep=1pt,label=left:$\%0$] (11) at (4, 3) { };
\node[circle,fill,inner sep=1pt,label=left:$\%5$] (12) at (3, 4) { };
\node[circle,fill,inner sep=1pt,label=left:$mem@0$] (13) at (1, 4) { };
\node[circle,fill,inner sep=1pt,label=left:$\%0$] (14) at (4, 4) { };
\node[circle,fill,inner sep=1pt,label=left:$\%5$] (15) at (3, 5) { };
\node[circle,fill,inner sep=1pt,label=left:$mem@0$] (16) at (1, 5) { };
\node[circle,fill,inner sep=1pt,label=left:$\%0$] (17) at (4, 5) { };
\node[circle,fill,inner sep=1pt,label=left:$\%5$] (18) at (3, 6) { };
\node[circle,fill,inner sep=1pt,label=left:$\%7$] (19) at (2, 6) { };
\node[circle,fill,inner sep=1pt,label=left:$mem@0$] (20) at (1, 6) { };
\node[circle,fill,inner sep=1pt,label=left:$\%0$] (21) at (4, 6) { };
\node[font=\tiny] (note_0) at (-1.5, 0.5) {Const(0, -12345.0)};
\node[font=\tiny] (note_1) at (-1.5, 1.5) {Store(0, 0.0, 0)};
\node[font=\tiny] (note_2) at (-1.5, 2.5) {Const(4, 8.0)};
\node[font=\tiny] (note_3) at (-1.5, 3.5) {Load(5, 0.0, 4)};
\node[font=\tiny] (note_4) at (-1.5, 4.5) {Const(6, 8.0)};
\node[font=\tiny] (note_5) at (-1.5, 5.5) {Load(7, 0.0, 6)};
		\path[->, blue] (0) [loop right] edge  node { } (0);
		\path[->, blue] (0) [bend right] edge  node { } (1);
		\path[->, blue] (0) [bend right] edge  node { } (2);
		\path[->, blue] (0) [bend right] edge  node { } (3);
		\path[->, blue] (0) [bend right] edge  node { } (4);
		\path[->, blue] (0) [bend right] edge  node { } (5);
		\path[->, blue] (0) [bend right] edge  node { } (6);
		\path[->, blue] (0) [bend right] edge  node { } (7);
		\path[->, blue] (0) [bend right] edge  node { } (8);
		\path[->, blue] (0) [bend right] edge  node { } (9);
		\path[->, blue] (0) [bend right] edge  node { } (10);
		\path[->, blue] (0) [bend right] edge  node { } (11);
		\path[->, blue] (0) [bend right] edge  node { } (12);
		\path[->, blue] (0) [bend right] edge  node { } (13);
		\path[->, blue] (0) [bend right] edge  node { } (14);
		\path[->, blue] (0) [bend right] edge  node { } (15);
		\path[->, blue] (0) [bend right] edge  node { } (16);
		\path[->, blue] (0) [bend right] edge  node { } (17);
		\path[->, blue] (0) [bend right] edge  node { } (18);
		\path[->, blue] (0) [bend right] edge  node { } (19);
		\path[->, blue] (0) [bend right] edge  node { } (20);
		\path[->, blue] (0) [bend right] edge  node { } (21);


                \end{tikzpicture}
            \end{document}
