ifds/src/tests/solver/snapshots/ifds__tests__solver__test_memory_vars.snap
---
source: src/tests/solver/mod.rs
expression: "format!(\"{:#?}\", vars)"

---
[
    "%0",
    "%5",
    "%7",
    "mem@0",
]
