ifds/src/tests/solver/snapshots/ifds__tests__solver__test_multiple_functions_vars.snap
---
source: src/tests/solver/mod.rs
expression: "format!(\"{:#?}\", vars)"

---
[
    "%0",
    "%1",
    "%2",
]
