ifds/src/tests/solver/snapshots/ifds__tests__solver__test_returned_values.snap
---
source: src/tests/solver/mod.rs
expression: "format!(\"{:#?}\", sinks)"

---
[
    Taint {
        variable: "%11",
        function: "0",
        pc: 9,
    },
    Taint {
        variable: "%11",
        function: "0",
        pc: 10,
    },
    Taint {
        variable: "%13",
        function: "0",
        pc: 11,
    },
    Taint {
        variable: "%11",
        function: "0",
        pc: 11,
    },
    Taint {
        variable: "%10",
        function: "0",
        pc: 9,
    },
    Taint {
        variable: "%15",
        function: "0",
        pc: 13,
    },
    Taint {
        variable: "%14",
        function: "0",
        pc: 13,
    },
    Taint {
        variable: "%0",
        function: "0",
        pc: 0,
    },
    Taint {
        variable: "%13",
        function: "0",
        pc: 12,
    },
    Taint {
        variable: "%11",
        function: "0",
        pc: 12,
    },
    Taint {
        variable: "%10",
        function: "0",
        pc: 10,
    },
    Taint {
        variable: "%14",
        function: "0",
        pc: 14,
    },
    Taint {
        variable: "%0",
        function: "0",
        pc: 1,
    },
    Taint {
        variable: "%15",
        function: "0",
        pc: 13,
    },
    Taint {
        variable: "%13",
        function: "0",
        pc: 13,
    },
    Taint {
        variable: "%11",
        function: "0",
        pc: 13,
    },
    Taint {
        variable: "%10",
        function: "0",
        pc: 11,
    },
    Taint {
        variable: "%0",
        function: "0",
        pc: 2,
    },
    Taint {
        variable: "%13",
        function: "0",
        pc: 14,
    },
    Taint {
        variable: "%11",
        function: "0",
        pc: 14,
    },
    Taint {
        variable: "%10",
        function: "0",
        pc: 12,
    },
    Taint {
        variable: "%0",
        function: "0",
        pc: 3,
    },
    Taint {
        variable: "%13",
        function: "0",
        pc: 15,
    },
    Taint {
        variable: "%11",
        function: "0",
        pc: 15,
    },
    Taint {
        variable: "%10",
        function: "0",
        pc: 13,
    },
    Taint {
        variable: "%1",
        function: "0",
        pc: 4,
    },
    Taint {
        variable: "%0",
        function: "0",
        pc: 4,
    },
    Taint {
        variable: "%13",
        function: "0",
        pc: 16,
    },
    Taint {
        variable: "%11",
        function: "0",
        pc: 16,
    },
    Taint {
        variable: "%10",
        function: "0",
        pc: 14,
    },
    Taint {
        variable: "%1",
        function: "0",
        pc: 5,
    },
    Taint {
        variable: "%7",
        function: "0",
        pc: 5,
    },
    Taint {
        variable: "%0",
        function: "0",
        pc: 5,
    },
    Taint {
        variable: "%10",
        function: "0",
        pc: 15,
    },
    Taint {
        variable: "%1",
        function: "0",
        pc: 6,
    },
    Taint {
        variable: "%7",
        function: "0",
        pc: 6,
    },
    Taint {
        variable: "%0",
        function: "0",
        pc: 6,
    },
    Taint {
        variable: "%10",
        function: "0",
        pc: 16,
    },
    Taint {
        variable: "%1",
        function: "0",
        pc: 7,
    },
    Taint {
        variable: "%9",
        function: "0",
        pc: 7,
    },
    Taint {
        variable: "%7",
        function: "0",
        pc: 7,
    },
    Taint {
        variable: "%0",
        function: "0",
        pc: 7,
    },
    Taint {
        variable: "%1",
        function: "0",
        pc: 8,
    },
    Taint {
        variable: "%9",
        function: "0",
        pc: 8,
    },
    Taint {
        variable: "%7",
        function: "0",
        pc: 8,
    },
    Taint {
        variable: "%0",
        function: "0",
        pc: 8,
    },
    Taint {
        variable: "%1",
        function: "0",
        pc: 9,
    },
    Taint {
        variable: "%9",
        function: "0",
        pc: 9,
    },
    Taint {
        variable: "%7",
        function: "0",
        pc: 9,
    },
    Taint {
        variable: "%0",
        function: "0",
        pc: 9,
    },
    Taint {
        variable: "%1",
        function: "0",
        pc: 10,
    },
    Taint {
        variable: "%9",
        function: "0",
        pc: 10,
    },
    Taint {
        variable: "%7",
        function: "0",
        pc: 10,
    },
    Taint {
        variable: "%0",
        function: "0",
        pc: 10,
    },
    Taint {
        variable: "%1",
        function: "0",
        pc: 11,
    },
    Taint {
        variable: "%9",
        function: "0",
        pc: 11,
    },
    Taint {
        variable: "%7",
        function: "0",
        pc: 11,
    },
    Taint {
        variable: "%0",
        function: "0",
        pc: 11,
    },
    Taint {
        variable: "%1",
        function: "0",
        pc: 12,
    },
    Taint {
        variable: "%9",
        function: "0",
        pc: 12,
    },
    Taint {
        variable: "%7",
        function: "0",
        pc: 12,
    },
    Taint {
        variable: "%0",
        function: "0",
        pc: 12,
    },
    Taint {
        variable: "%1",
        function: "0",
        pc: 13,
    },
    Taint {
        variable: "%9",
        function: "0",
        pc: 13,
    },
    Taint {
        variable: "%7",
        function: "0",
        pc: 13,
    },
    Taint {
        variable: "%0",
        function: "0",
        pc: 13,
    },
    Taint {
        variable: "%1",
        function: "0",
        pc: 14,
    },
    Taint {
        variable: "%9",
        function: "0",
        pc: 14,
    },
    Taint {
        variable: "%7",
        function: "0",
        pc: 14,
    },
    Taint {
        variable: "%0",
        function: "0",
        pc: 14,
    },
    Taint {
        variable: "%1",
        function: "0",
        pc: 15,
    },
    Taint {
        variable: "%9",
        function: "0",
        pc: 15,
    },
    Taint {
        variable: "%7",
        function: "0",
        pc: 15,
    },
    Taint {
        variable: "%0",
        function: "0",
        pc: 15,
    },
    Taint {
        variable: "%1",
        function: "0",
        pc: 16,
    },
    Taint {
        variable: "%9",
        function: "0",
        pc: 16,
    },
    Taint {
        variable: "%7",
        function: "0",
        pc: 16,
    },
    Taint {
        variable: "%0",
        function: "0",
        pc: 16,
    },
]
